// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NotionUser update space multiple=false,arg=string 1`] = `
Object {
  "id": "space_1",
  "last_edited_by_id": "user_1",
  "last_edited_by_table": "notion_user",
  "last_edited_time": Any<Number>,
  "name": "Space One",
  "shard_id": 123,
}
`;

exports[`NotionUser update space multiple=false,arg=string 2`] = `
Array [
  Object {
    "args": Object {
      "last_edited_by_id": "user_1",
      "last_edited_by_table": "notion_user",
      "last_edited_time": Any<Number>,
      "name": "Space One",
    },
    "command": "update",
    "id": "space_1",
    "path": Array [],
    "table": "space",
  },
]
`;
